--- a/style.css
+++ b/style.css
@@ -8,3 +8,9 @@ header{
     height: 100px;
     background-color: rgb(107, 107, 255);
 }
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+}
+
